[build-system]
requires = [
  "setuptools >= 61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "sshcontrol"
version = "0.0.1"
authors = [
  {name="Alex Kwiatkowski", email="alex@fremantle.io"},
]
description = "Pythonic wrapper for asyncio OpenSSH control master connections"
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
]

[project.optional-dependencies]
dev = [
  "ruff >=0.3.4",
  "pygments >=2.17.0",
  "pyhamcrest >=2.1.0",
  "pyright >=1.1.0",
  "pytest >=8.1.0",
  "pytest-asyncio >=0.23.0",
  "pytest-cov >=5.0.0",
  "pytest-unordered >=0.6.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[tool.pytest.ini_options]
markers = []
filterwarnings = []
